--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,7 @@
-=========================================================BASE STYLES=========================================================*/ body {
+/* ============BASE============== */
+
+
+body {
 
   font-family: 'Source Sans Pro', sans-serif;
 
