fixing welcome section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,13 +241,9 @@ img {
 
 
 .hamster-img {
-
-  max-width: 70%;
-
-  border-radius: 0px;
-
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-
+  max-width: 300px;
+  width: 100%;
+  height: auto;
 }
 
 
