--- a/styles/styles.css
+++ b/styles/styles.css
@@ -751,19 +751,27 @@ img {
 
   color: white;
 
+  padding: 15px;
+
+
 }
 
 
 
 .reservation-inline-form .form-label {
 
-  font-family: 'Source Sans Pro, Regular';
+  text-align: left;
+  font: normal normal normal 16px/20px Source Sans Pro;
+  letter-spacing: 0px;
+  color: #E5FEFF;
+  opacity: 1;
 
   font-weight: lighter;
 
   text-align: left;
 
   margin-bottom: 5px;
+
 
 }
 
@@ -773,13 +781,11 @@ img {
 
 .reservation-inline-form select {
 
-  font: normal normal normal 16px/20px 'Source Sans Pro';
-
-  /* /* font-size: 16px; */
-
-  font-weight: lighter;
-
   text-align: left;
+  font: normal normal normal 16px/20px 'Source Sans Pro';
+  letter-spacing: 0px;
+  color: #E5FEFF;
+  opacity: 1;
 
   padding: 0.5rem;
 
@@ -840,7 +846,7 @@ img {
 
   color: #ffffff;
 
- font: normal normal normal 16px/20px 'Source Sans Pro';
+  font: normal normal normal 16px/20px 'Source Sans Pro';
 
   padding-top: 3rem;
 
