--- a/styles/styles.css
+++ b/styles/styles.css
@@ -500,7 +500,7 @@ img {
 
   font-size: 1rem;
 
-  text-transform: uppercase;
+  text-transform: none;
 
   transition: background-color 0.3s ease;
 
