fixing packages section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -606,6 +606,10 @@ height: 234px;
 
 }
 
+.bloom-text {
+  padding-left: 75px;
+}
+
 
 
 /* =========================================================
@@ -686,8 +690,6 @@ height: 234px;
 
 }
 
-
-
 /* =========================================================
 
    RESERVATION SECTION
@@ -729,7 +731,7 @@ height: 234px;
 .reserveCont {
 
   width: 75%;
-  
+
 }
 
 
